Added pages to each card

--- a/data/users.yml
+++ b/data/users.yml
@@ -2,3 +2,11 @@
   github_nickname: 'pavlovoi'
 - name: 'Clément Bonnemaire'
   github_nickname: 'clembonmr'
+- name: 'Philipp Preuss'
+  github_nickname: 'ppreuss'
+- name: 'Arnaud De La Chaise'
+  github_nickname: 'arnauddlc'
+- name: 'Sonia Montero'
+  github_nickname: 'soniamontero'
+- name: 'Freddy Kurniawan'
+  github_nickname: 'freddykwan91'
